feat(oauth): Support HTTPS callback URIs in AuthorizationCodeFlow (#168)
Fixes #164.

Some configuration options were changed: from `rest.auth.oauth2.auth-code.callback-*` to `rest.auth.oauth2.auth-code.callback.*`. The old options are still supported, but will generate a warning.